html changes too

--- a/chessboard.html
+++ b/chessboard.html
@@ -3,9 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style/chessboard.css">
   <title>Chess</title>
 </head>
 <body>
-  
+  <div class="board">
+    <!-- Letter Row -->
+    <div></div>
+    <div class="no-wrap">A</div>
+    <div class="no-wrap">B</div>
+    <div class="no-wrap">C</div>
+    <div class="no-wrap">D</div>
+    <div class="no-wrap">E</div>
+    <div class="no-wrap">F</div>
+    <div class="no-wrap">G</div>
+    <div class="no-wrap">H</div>
+    <div></div>
+    <!-- Row 1 -->
+    <div>1</div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div>1</div>
+    <!-- Row 2 -->
+    <div>2</div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div>2</div>
+    <!-- Row 3 -->
+    <div>3</div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div>3</div>
+    <!-- Row 4 -->
+    <div>4</div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div>4</div>
+    <!-- Row 5 -->
+    <div>5</div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div>5</div>
+    <!-- Row 6 -->
+    <div>6</div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div>6</div>
+    <!-- Row 7 -->
+    <div>7</div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div>7</div>
+    <!-- Row 8 -->
+    <div>8</div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div>8</div>
+    <!-- Letter Row Again -->
+    <div></div>
+    <div class="no-wrap">A</div>
+    <div class="no-wrap">B</div>
+    <div class="no-wrap">C</div>
+    <div class="no-wrap">D</div>
+    <div class="no-wrap">E</div>
+    <div class="no-wrap">F</div>
+    <div class="no-wrap">G</div>
+    <div class="no-wrap">H</div>
+    <div></div>
+   
+  </div>
 </body>
 </html>
