all of the dark chess peices

--- a/chessboard.html
+++ b/chessboard.html
@@ -21,25 +21,25 @@
     <div></div>
     <!-- Row 1 -->
     <div>1</div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
+    <div class="black"><img src="./images/black-rook.png" alt="The black rook"></div>
+    <div class="white"><img src="./images/black-knight.png" alt="The black knight"></div>
+    <div class="black"><img src="./images/black-bishop.png" alt="The black bishop"></div>
+    <div class="white"><img src="./images/black-king.png" alt="The black king"></div>
+    <div class="black"><img src="./images/black-queen.png" alt="The black queen"></div>
+    <div class="white"><img src="./images/black-bishop.png" alt="The black bishop"></div>
+    <div class="black"><img src="./images/black-knight.png" alt="The black knight"></div>
+    <div class="white"><img src="./images/black-rook.png" alt="The black rook"></div>
     <div>1</div>
     <!-- Row 2 -->
     <div>2</div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
+    <div class="white"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="black"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="white"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="black"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="white"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="black"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="white"><img src="./images/black-pawn.png" alt="The black pawn"></div>
+    <div class="black"><img src="./images/black-pawn.png" alt="The black pawn"></div>
     <div>2</div>
     <!-- Row 3 -->
     <div>3</div>
