--- a/chessboard.html
+++ b/chessboard.html
@@ -87,25 +87,25 @@
     <div>6</div>
     <!-- Row 7 -->
     <div>7</div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
+    <div class="black"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="white"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="black"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="white"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="black"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="white"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="black"><img src="./images/white-pawn.png" alt="The white pawn"></div>
+    <div class="white"><img src="./images/white-pawn.png" alt="The white pawn"></div>
     <div>7</div>
     <!-- Row 8 -->
     <div>8</div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
-    <div class="white"></div>
-    <div class="black"></div>
+    <div class="white"><img src="./images/white-rook.png" alt="The white rook"></div>
+    <div class="black"><img src="./images/white-knight.png" alt="The white knight"></div>
+    <div class="white"><img src="./images/white-bishop.png" alt="The white bishop"></div>
+    <div class="black"><img src="./images/white-king.png" alt="The white king"></div>
+    <div class="white"><img src="./images/white-queen.png" alt="The white queen"></div>
+    <div class="black"><img src="./images/white-bishop.png" alt="The white bishop"></div>
+    <div class="white"><img src="./images/white-knight.png" alt="The white knight"></div>
+    <div class="black"><img src="./images/white-rook.png" alt="The white rook"></div>
     <div>8</div>
     <!-- Letter Row Again -->
     <div></div>
