--- a/modal-dialog.html
+++ b/modal-dialog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Modal Dialog</title>
+  <link rel="stylesheet" href="./style/modal.css">
 </head>
 
 <body>
@@ -17,7 +18,6 @@
 
     <div class="modal-buttons">
       <button>Ok</button>
-
       <button>Cancel</button>
     </div>
   </div>
