--- a/modrian.html
+++ b/modrian.html
@@ -16,21 +16,77 @@
 
 </head>
 <body>
-  <div class="container border">
     <!-- Top row -->
     <div class="row">
-      <div class="col-2 white border"></div>
-      <div class="col-3 white border"></div>
-      <div class="col-1 yellow border"></div>
-      <div class="col-2 blue"></div>
-      <div class="col-1">
+      <!-- Left half -->
+      <div class="col-sm">
         <div class="row">
-          <div class="col-sm-1 yellow border"></div>
-          <div class="col-sm-1 black border"></div>
+          <div class="col-sm-3 white border"></div>
+          <div class="col-sm-5 white border"></div>
+          <div class="col-sm-4 yellow border"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white"></div>
+          <div class="col-sm-6 red"></div>
+          <div class="col-sm-4 yellow"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white border-bottom border-right"></div>
+          <div class="col-sm-6 red"></div>
+          <div class="col-sm-4 yellow border-bottom border-right"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white"></div>
+          <div class="col-sm-6 red"></div>
+          <div class="col-sm-2 white border-right"></div>
+          <div class="col-sm-2 white border-right"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white"></div>
+          <div class="col-sm-6 red border-bottom"></div>
+          <div class="col-sm-2 white border-right border-bottom"></div>
+          <div class="col-sm-2 white border-right border-bottom"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white border-bottom"></div>
+          <div class="col-sm-3 black"></div>
+          <div class="col-sm-3 white border"></div>
+          <div class="col-sm-4 white border"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 yellow"></div>
+          <div class="col-sm-3 black"></div>
+          <div class="col-sm-3 white border"></div>
+          <div class="col-sm-4 blue"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 yellow"></div>
+          <div class="col-sm-3 white"></div>
+          <div class="col-sm-3 black border"></div>
+          <div class="col-sm-4 blue"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 yellow"></div>
+          <div class="col-sm-3 white"></div>
+          <div class="col-sm yellow border-left"></div>
+          <div class="col-sm white border-left border-right"></div>
+          <div class="col-sm-4 red"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-5 white border"></div>
+          <div class="col-sm yellow border-bottom"></div>
+          <div class="col-sm white border-bottom border-right border-left"></div>
+          <div class="col-sm-4 red"></div>
         </div>
       </div>
-      <div class="col-3 white border"></div>
-    </div>
-  </div>
+      <!-- Right half -->
+      <div class="col-sm">
+        <div class="row">
+          <div class="col-sm-4 blue"></div>
+          <div class="col-sm-1 yellow border"></div>
+          <div class="col-sm-1 black border"></div>
+          <div class="col-sm-6 white border"></div>
+        </div>
+      </div>
 </body>
 </html>
