--- a/modrian.html
+++ b/modrian.html
@@ -21,62 +21,62 @@
       <!-- Left half -->
       <div class="col-sm">
         <div class="row">
-          <div class="col-sm-3 white border"></div>
-          <div class="col-sm-5 white border"></div>
-          <div class="col-sm-4 yellow border"></div>
+          <div class="col-sm-3 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-sm-5 white border-right border-bottom border-dark"></div>
+          <div class="col-sm-4 yellow border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white"></div>
-          <div class="col-sm-6 red"></div>
-          <div class="col-sm-4 yellow"></div>
+          <div class="col-sm-2 white border-left border-right border-dark"></div>
+          <div class="col-sm-6 red border-right border-dark"></div>
+          <div class="col-sm-4 yellow border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-bottom border-right"></div>
-          <div class="col-sm-6 red"></div>
-          <div class="col-sm-4 yellow border-bottom border-right"></div>
+          <div class="col-sm-2 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-sm-6 red border-right border-dark"></div>
+          <div class="col-sm-4 yellow border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white"></div>
-          <div class="col-sm-6 red"></div>
-          <div class="col-sm-2 white border-right"></div>
-          <div class="col-sm-2 white border-right"></div>
+          <div class="col-sm-2 white border-left border-right border-dark"></div>
+          <div class="col-sm-6 red border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white"></div>
-          <div class="col-sm-6 red border-bottom"></div>
-          <div class="col-sm-2 white border-right border-bottom"></div>
-          <div class="col-sm-2 white border-right border-bottom"></div>
+          <div class="col-sm-2 white border-left border-right border-dark"></div>
+          <div class="col-sm-6 red border-right border-bottom border-dark"></div>
+          <div class="col-sm-2 white border-right border-bottom border-dark"></div>
+          <div class="col-sm-2 white border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-bottom"></div>
-          <div class="col-sm-3 black"></div>
-          <div class="col-sm-3 white border"></div>
-          <div class="col-sm-4 white border"></div>
+          <div class="col-sm-2 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-sm-3 black border-right border-dark"></div>
+          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
+          <div class="col-sm-4 white border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow"></div>
-          <div class="col-sm-3 black"></div>
-          <div class="col-sm-3 white border"></div>
-          <div class="col-sm-4 blue"></div>
+          <div class="col-sm-2 yellow border-left border-right border-dark"></div>
+          <div class="col-sm-3 black border-right border-dark"></div>
+          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
+          <div class="col-sm-4 blue border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow"></div>
-          <div class="col-sm-3 white"></div>
-          <div class="col-sm-3 black border"></div>
-          <div class="col-sm-4 blue"></div>
+          <div class="col-sm-2 yellow border-left border-right border-dark"></div>
+          <div class="col-sm-3 white border-right border-dark"></div>
+          <div class="col-sm-3 black border-right border-bottom border-dark"></div>
+          <div class="col-sm-4 blue border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow"></div>
-          <div class="col-sm-3 white"></div>
-          <div class="col-sm yellow border-left"></div>
-          <div class="col-sm white border-left border-right"></div>
-          <div class="col-sm-4 red"></div>
+          <div class="col-sm-2 yellow border-left border-right border-bottom border-dark"></div>
+          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
+          <div class="col-sm yellow border-right border-dark"></div>
+          <div class="col-sm white border-right border-dark"></div>
+          <div class="col-sm-4 red border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-5 white border"></div>
-          <div class="col-sm yellow border-bottom"></div>
-          <div class="col-sm white border-bottom border-right border-left"></div>
-          <div class="col-sm-4 red"></div>
+          <div class="col-sm-5 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-sm yellow border-right border-bottom border-dark"></div>
+          <div class="col-sm white border-right border-bottom border-dark"></div>
+          <div class="col-sm-4 red border-right border-bottom border-dark"></div>
         </div>
       </div>
       <!-- Right half -->
