right side for mondrian.css

--- a/modrian.html
+++ b/modrian.html
@@ -16,7 +16,6 @@
 
 </head>
 <body>
-    <!-- Top row -->
     <div class="row">
       <!-- Left half -->
       <div class="col-sm">
@@ -82,10 +81,62 @@
       <!-- Right half -->
       <div class="col-sm">
         <div class="row">
-          <div class="col-sm-4 blue"></div>
-          <div class="col-sm-1 yellow border"></div>
-          <div class="col-sm-1 black border"></div>
-          <div class="col-sm-6 white border"></div>
+          <div class="col-sm-4 blue border-right border-dark"></div>
+          <div class="col-sm yellow border-bottom border-right border-dark"></div>
+          <div class="col-sm black border-bottom border-right border-dark"></div>
+          <div class="col-sm-5 white border-bottom border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 blue border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 yellow border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 white border-right border-dark"></div>
+          <div class="col-sm-2 yellow border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 red border-right border-dark"></div>
+          <div class="col-sm-3 black border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-2 yellow border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 red border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 black border-right border-dark"></div>
+          <div class="col-sm-2 yellow border-right border-bottom border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 black border-bottom border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-sm-6 blue border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-6 blue border-right border-dark"></div>
+          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 yellow border-right border-dark"></div>
+          <div class="col-sm-6 blue border-right border-dark"></div>
+          <div class="col-sm-2 white border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4 yellow border-bottom border-right border-dark"></div>
+          <div class="col-sm-6 blue border-bottom border-right border-dark"></div>
+          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-2 black border-bottom border-right border-dark"></div>
+          <div class="col-sm-5 white border-bottom border-right border-dark"></div>
+          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
         </div>
       </div>
 </body>
