took out the sm from the column width sizing

--- a/modrian.html
+++ b/modrian.html
@@ -20,123 +20,123 @@
       <!-- Left half -->
       <div class="col-sm">
         <div class="row">
-          <div class="col-sm-3 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-sm-5 white border-right border-bottom border-dark"></div>
-          <div class="col-sm-4 yellow border-right border-bottom border-dark"></div>
+          <div class="col-3 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-5 white border-right border-bottom border-dark"></div>
+          <div class="col-4 yellow border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-left border-right border-dark"></div>
-          <div class="col-sm-6 red border-right border-dark"></div>
-          <div class="col-sm-4 yellow border-right border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark"></div>
+          <div class="col-6 red border-right border-dark"></div>
+          <div class="col-4 yellow border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-sm-6 red border-right border-dark"></div>
-          <div class="col-sm-4 yellow border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-6 red border-right border-dark"></div>
+          <div class="col-4 yellow border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-left border-right border-dark"></div>
-          <div class="col-sm-6 red border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark"></div>
+          <div class="col-6 red border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-left border-right border-dark"></div>
-          <div class="col-sm-6 red border-right border-bottom border-dark"></div>
-          <div class="col-sm-2 white border-right border-bottom border-dark"></div>
-          <div class="col-sm-2 white border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark"></div>
+          <div class="col-6 red border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-sm-3 black border-right border-dark"></div>
-          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
-          <div class="col-sm-4 white border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-bottom border-dark"></div>
+          <div class="col-3 black border-right border-dark"></div>
+          <div class="col-3 white border-right border-bottom border-dark"></div>
+          <div class="col-4 white border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow border-left border-right border-dark"></div>
-          <div class="col-sm-3 black border-right border-dark"></div>
-          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
-          <div class="col-sm-4 blue border-right border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-dark"></div>
+          <div class="col-3 black border-right border-dark"></div>
+          <div class="col-3 white border-right border-bottom border-dark"></div>
+          <div class="col-4 blue border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow border-left border-right border-dark"></div>
-          <div class="col-sm-3 white border-right border-dark"></div>
-          <div class="col-sm-3 black border-right border-bottom border-dark"></div>
-          <div class="col-sm-4 blue border-right border-bottom border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-dark"></div>
+          <div class="col-3 white border-right border-dark"></div>
+          <div class="col-3 black border-right border-bottom border-dark"></div>
+          <div class="col-4 blue border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 yellow border-left border-right border-bottom border-dark"></div>
-          <div class="col-sm-3 white border-right border-bottom border-dark"></div>
-          <div class="col-sm yellow border-right border-dark"></div>
-          <div class="col-sm white border-right border-dark"></div>
-          <div class="col-sm-4 red border-right border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-bottom border-dark"></div>
+          <div class="col-3 white border-right border-bottom border-dark"></div>
+          <div class="col yellow border-right border-dark"></div>
+          <div class="col white border-right border-dark"></div>
+          <div class="col-4 red border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-5 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-sm yellow border-right border-bottom border-dark"></div>
-          <div class="col-sm white border-right border-bottom border-dark"></div>
-          <div class="col-sm-4 red border-right border-bottom border-dark"></div>
+          <div class="col-5 white border-left border-right border-bottom border-dark"></div>
+          <div class="col yellow border-right border-bottom border-dark"></div>
+          <div class="col white border-right border-bottom border-dark"></div>
+          <div class="col-4 red border-right border-bottom border-dark"></div>
         </div>
       </div>
       <!-- Right half -->
-      <div class="col-sm">
+      <div class="col">
         <div class="row">
-          <div class="col-sm-4 blue border-right border-dark"></div>
-          <div class="col-sm yellow border-bottom border-right border-dark"></div>
-          <div class="col-sm black border-bottom border-right border-dark"></div>
-          <div class="col-sm-5 white border-bottom border-right border-dark"></div>
+          <div class="col-4 blue border-right border-dark"></div>
+          <div class="col yellow border-bottom border-right border-dark"></div>
+          <div class="col black border-bottom border-right border-dark"></div>
+          <div class="col-5 white border-bottom border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 blue border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 yellow border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 white border-right border-dark"></div>
-          <div class="col-sm-2 yellow border-right border-dark"></div>
+          <div class="col-4 blue border-bottom border-right border-dark"></div>
+          <div class="col-3 yellow border-bottom border-right border-dark"></div>
+          <div class="col-3 white border-right border-dark"></div>
+          <div class="col-2 yellow border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 red border-right border-dark"></div>
-          <div class="col-sm-3 black border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-2 yellow border-right border-dark"></div>
+          <div class="col-4 red border-right border-dark"></div>
+          <div class="col-3 black border-bottom border-right border-dark"></div>
+          <div class="col-3 white border-bottom border-right border-dark"></div>
+          <div class="col-2 yellow border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 red border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 black border-right border-dark"></div>
-          <div class="col-sm-2 yellow border-right border-bottom border-dark"></div>
+          <div class="col-4 red border-bottom border-right border-dark"></div>
+          <div class="col-3 white border-bottom border-right border-dark"></div>
+          <div class="col-3 black border-right border-dark"></div>
+          <div class="col-2 yellow border-right border-bottom border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 black border-bottom border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-4 white border-bottom border-right border-dark"></div>
+          <div class="col-3 white border-bottom border-right border-dark"></div>
+          <div class="col-3 black border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
-          <div class="col-sm-6 blue border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-6 blue border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-6 blue border-right border-dark"></div>
-          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark"></div>
+          <div class="col-6 blue border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 yellow border-right border-dark"></div>
-          <div class="col-sm-6 blue border-right border-dark"></div>
-          <div class="col-sm-2 white border-right border-dark"></div>
+          <div class="col-4 yellow border-right border-dark"></div>
+          <div class="col-6 blue border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-4 yellow border-bottom border-right border-dark"></div>
-          <div class="col-sm-6 blue border-bottom border-right border-dark"></div>
-          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
+          <div class="col-4 yellow border-bottom border-right border-dark"></div>
+          <div class="col-6 blue border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark"></div>
         </div>
         <div class="row">
-          <div class="col-sm-2 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-2 black border-bottom border-right border-dark"></div>
-          <div class="col-sm-5 white border-bottom border-right border-dark"></div>
-          <div class="col-sm-3 white border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark"></div>
+          <div class="col-2 black border-bottom border-right border-dark"></div>
+          <div class="col-5 white border-bottom border-right border-dark"></div>
+          <div class="col-3 white border-bottom border-right border-dark"></div>
         </div>
       </div>
 </body>
