border-sizing changed

--- a/modrian.html
+++ b/modrian.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian</title>
-  <link rel="stylesheet" href="./style/modrian.css">
+
 
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -13,131 +13,133 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+  <link rel="stylesheet" href="./style/modrian.css">
 </head>
 <body>
+  <div class="container mt-5 border-top border-dark big-border">
     <div class="row">
       <!-- Left half -->
       <div class="col-sm">
         <div class="row">
-          <div class="col-3 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-5 white border-right border-bottom border-dark"></div>
-          <div class="col-4 yellow border-right border-bottom border-dark"></div>
+          <div class="col-3 white border-left border-right border-bottom border-dark big-border"></div>
+          <div class="col-5 white border-right border-bottom border-dark big-border"></div>
+          <div class="col-4 yellow border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-left border-right border-dark"></div>
-          <div class="col-6 red border-right border-dark"></div>
-          <div class="col-4 yellow border-right border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark big-border"></div>
+          <div class="col-6 red border-right border-dark big-border"></div>
+          <div class="col-4 yellow border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-6 red border-right border-dark"></div>
-          <div class="col-4 yellow border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-bottom border-dark big-border"></div>
+          <div class="col-6 red border-right border-dark big-border"></div>
+          <div class="col-4 yellow border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-left border-right border-dark"></div>
-          <div class="col-6 red border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark big-border"></div>
+          <div class="col-6 red border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-left border-right border-dark"></div>
-          <div class="col-6 red border-right border-bottom border-dark"></div>
-          <div class="col-2 white border-right border-bottom border-dark"></div>
-          <div class="col-2 white border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-dark big-border"></div>
+          <div class="col-6 red border-right border-bottom border-dark big-border"></div>
+          <div class="col-2 white border-right border-bottom border-dark big-border"></div>
+          <div class="col-2 white border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-left border-right border-bottom border-dark"></div>
-          <div class="col-3 black border-right border-dark"></div>
-          <div class="col-3 white border-right border-bottom border-dark"></div>
-          <div class="col-4 white border-right border-bottom border-dark"></div>
+          <div class="col-2 white border-left border-right border-bottom border-dark big-border"></div>
+          <div class="col-3 black border-right border-dark big-border"></div>
+          <div class="col-3 white border-right border-bottom border-dark big-border"></div>
+          <div class="col-4 white border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 yellow border-left border-right border-dark"></div>
-          <div class="col-3 black border-right border-dark"></div>
-          <div class="col-3 white border-right border-bottom border-dark"></div>
-          <div class="col-4 blue border-right border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-dark big-border"></div>
+          <div class="col-3 black border-right border-dark big-border"></div>
+          <div class="col-3 white border-right border-bottom border-dark big-border"></div>
+          <div class="col-4 blue border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 yellow border-left border-right border-dark"></div>
-          <div class="col-3 white border-right border-dark"></div>
-          <div class="col-3 black border-right border-bottom border-dark"></div>
-          <div class="col-4 blue border-right border-bottom border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-dark big-border"></div>
+          <div class="col-3 white border-right border-dark big-border"></div>
+          <div class="col-3 black border-right border-bottom border-dark big-border"></div>
+          <div class="col-4 blue border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 yellow border-left border-right border-bottom border-dark"></div>
-          <div class="col-3 white border-right border-bottom border-dark"></div>
-          <div class="col yellow border-right border-dark"></div>
-          <div class="col white border-right border-dark"></div>
-          <div class="col-4 red border-right border-dark"></div>
+          <div class="col-2 yellow border-left border-right border-bottom border-dark big-border"></div>
+          <div class="col-3 white border-right border-bottom border-dark big-border"></div>
+          <div class="col yellow border-right border-dark big-border"></div>
+          <div class="col white border-right border-dark big-border"></div>
+          <div class="col-4 red border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-5 white border-left border-right border-bottom border-dark"></div>
-          <div class="col yellow border-right border-bottom border-dark"></div>
-          <div class="col white border-right border-bottom border-dark"></div>
-          <div class="col-4 red border-right border-bottom border-dark"></div>
+          <div class="col-5 white border-left border-right border-bottom border-dark big-border"></div>
+          <div class="col yellow border-right border-bottom border-dark big-border"></div>
+          <div class="col white border-right border-bottom border-dark big-border"></div>
+          <div class="col-4 red border-right border-bottom border-dark big-border"></div>
         </div>
       </div>
       <!-- Right half -->
       <div class="col">
         <div class="row">
-          <div class="col-4 blue border-right border-dark"></div>
-          <div class="col yellow border-bottom border-right border-dark"></div>
-          <div class="col black border-bottom border-right border-dark"></div>
-          <div class="col-5 white border-bottom border-right border-dark"></div>
+          <div class="col-4 blue border-right border-dark big-border"></div>
+          <div class="col yellow border-bottom border-right border-dark big-border"></div>
+          <div class="col black border-bottom border-right border-dark big-border"></div>
+          <div class="col-5 white border-bottom border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 blue border-bottom border-right border-dark"></div>
-          <div class="col-3 yellow border-bottom border-right border-dark"></div>
-          <div class="col-3 white border-right border-dark"></div>
-          <div class="col-2 yellow border-right border-dark"></div>
+          <div class="col-4 blue border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 yellow border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 white border-right border-dark big-border"></div>
+          <div class="col-2 yellow border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 red border-right border-dark"></div>
-          <div class="col-3 black border-bottom border-right border-dark"></div>
-          <div class="col-3 white border-bottom border-right border-dark"></div>
-          <div class="col-2 yellow border-right border-dark"></div>
+          <div class="col-4 red border-right border-dark big-border"></div>
+          <div class="col-3 black border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-2 yellow border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 red border-bottom border-right border-dark"></div>
-          <div class="col-3 white border-bottom border-right border-dark"></div>
-          <div class="col-3 black border-right border-dark"></div>
-          <div class="col-2 yellow border-right border-bottom border-dark"></div>
+          <div class="col-4 red border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 black border-right border-dark big-border"></div>
+          <div class="col-2 yellow border-right border-bottom border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 white border-bottom border-right border-dark"></div>
-          <div class="col-3 white border-bottom border-right border-dark"></div>
-          <div class="col-3 black border-bottom border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-4 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 black border-bottom border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
-          <div class="col-6 blue border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
+          <div class="col-6 blue border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-bottom border-right border-dark"></div>
-          <div class="col-2 white border-bottom border-right border-dark"></div>
-          <div class="col-6 blue border-right border-dark"></div>
-          <div class="col-2 white border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-2 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-6 blue border-right border-dark big-border"></div>
+          <div class="col-2 white border-bottom border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 yellow border-right border-dark"></div>
-          <div class="col-6 blue border-right border-dark"></div>
-          <div class="col-2 white border-right border-dark"></div>
+          <div class="col-4 yellow border-right border-dark big-border"></div>
+          <div class="col-6 blue border-right border-dark big-border"></div>
+          <div class="col-2 white border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-4 yellow border-bottom border-right border-dark"></div>
-          <div class="col-6 blue border-bottom border-right border-dark"></div>
-          <div class="col-2 white border-bottom border-right border-dark"></div>
+          <div class="col-4 yellow border-bottom border-right border-dark big-border"></div>
+          <div class="col-6 blue border-bottom border-right border-dark big-border"></div>
+          <div class="col-2 white border-bottom border-right border-dark big-border"></div>
         </div>
         <div class="row">
-          <div class="col-2 white border-bottom border-right border-dark"></div>
-          <div class="col-2 black border-bottom border-right border-dark"></div>
-          <div class="col-5 white border-bottom border-right border-dark"></div>
-          <div class="col-3 white border-bottom border-right border-dark"></div>
+          <div class="col-2 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-2 black border-bottom border-right border-dark big-border"></div>
+          <div class="col-5 white border-bottom border-right border-dark big-border"></div>
+          <div class="col-3 white border-bottom border-right border-dark big-border"></div>
         </div>
       </div>
+    </div>
 </body>
 </html>
