--- a/modrian.html
+++ b/modrian.html
@@ -19,7 +19,7 @@
   <div class="container mt-5 border-top border-dark big-border">
     <div class="row">
       <!-- Left half -->
-      <div class="col-sm">
+      <div class="col-6">
         <div class="row">
           <div class="col-3 white border-left border-right border-bottom border-dark big-border"></div>
           <div class="col-5 white border-right border-bottom border-dark big-border"></div>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <!-- Right half -->
-      <div class="col">
+      <div class="col-6">
         <div class="row">
           <div class="col-4 blue border-right border-dark big-border"></div>
           <div class="col yellow border-bottom border-right border-dark big-border"></div>
